--- a/src/frontend/app/components/structure/style.scss
+++ b/src/frontend/app/components/structure/style.scss
@@ -1,7 +1,7 @@
 html, body{
 	margin: 0;
 	padding: 10px;
-	font-weight: 100;
-	font-family: 'Raleway', 'Helvetica Neue', Helvetica, sans-serif;
+	font-weight: 300;
+	font-family: 'Open Sans', 'Helvetica Neue', Helvetica, sans-serif;
 	min-height: 100vh;
 }
