Added notification fade.
Simple transition in scss style seemed to not be working.
For this reason react-addons-css-transition-group is being used.
It's an addon that provides transitions to the react components.

--- a/src/frontend/app/containers/notification-container/style.scss
+++ b/src/frontend/app/containers/notification-container/style.scss
@@ -3,3 +3,33 @@
 	right: 5px;
 	top: 5px;
 }
+
+:global{
+	.notification-fade-enter{
+        opacity: 0.01;
+
+        &.notification-fade-enter-active{
+	        opacity: 1;
+	        transition: opacity 500ms ease-in;
+	    }
+    }
+
+    .notification-fade-leave{
+        opacity: 1;
+
+        &.notification-fade-leave-active{
+            opacity: 0.01;
+            transition: opacity 500ms ease-in;
+        }
+    }
+
+    .notification-fade-appear{
+        opacity: 0.01;
+
+        &.notification-fade-appear-active{
+	        opacity: 1;
+	        transition: opacity 500ms ease-in;
+	    }
+    }
+    
+}
