Updated the color of the loading bar

--- a/src/frontend/app/components/page-loading-bar/style.scss
+++ b/src/frontend/app/components/page-loading-bar/style.scss
@@ -13,7 +13,7 @@
     height: 3px;
     top: 0px;
     width: 50%;
-    background-color: #E91E63;
+    background-color: #1e95e9;
     animation: barSlide 1s infinite;
 
     @keyframes barSlide{
