--- a/src/frontend/app/components/notification/style.scss
+++ b/src/frontend/app/components/notification/style.scss
@@ -18,7 +18,7 @@
 	border-radius: 4px;
 	margin: 10px 5px;
 	color: black;
-	font-size: 14px;
+	font-size: 1rem;
 	@include background();
 	border: 1px solid #6d88b7;
 	box-shadow: inset 0px 1px 0px #DDD;
