--- a/src/frontend/app/components/login/style.scss
+++ b/src/frontend/app/components/login/style.scss
@@ -1,3 +1,5 @@
+@import '../../style/main';
+
 .particlesContainer{
 	position: fixed;
 	top: 0;
@@ -60,5 +62,12 @@
 		margin: 4px auto;
 		outline: none;
 		font: 100 18px 'Helvetica Neue', 'Helvetica', 'Open Sans', 'Roboto', sans-serif;
+	}
+
+	button{
+		@extend .button;
+		box-shadow: inset 1px 0px 0px rgba( 255, 255, 255, 0.3 ),
+					inset 0px -1px 0px rgba( 255, 255, 255, 0.3 ),
+					0 0 10px rgba( 0, 0, 0, 0.3 );
 	}
 }
