--- a/src/frontend/app/components/command-line/style.scss
+++ b/src/frontend/app/components/command-line/style.scss
@@ -17,6 +17,7 @@
 	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#494956', endColorstr='#515160',GradientType=0 ); /* IE6-9 */
 
 	.centeredBarContent{
+		box-sizing: border-box;
 		width: 750px;
 		max-width: 100%;
 		display: inline-block;
