--- a/src/frontend/app/components/page-loading-bar/style.scss
+++ b/src/frontend/app/components/page-loading-bar/style.scss
@@ -1,10 +1,11 @@
 .pageLoadingBar{
     opacity: 0;
-    position: fixed;
+    overflow-x: hidden;
+    position: absolute;
     top: 0;
     left: 0;
     right: 0;
-    height: 1px;
+    height: 4px;
     transition: opacity 0.5s;
     z-index: 999;
 }
