--- a/src/frontend/app/components/command-line/style.scss
+++ b/src/frontend/app/components/command-line/style.scss
@@ -5,8 +5,7 @@
 	height: 70px;
 	text-align: center;
 	cursor: pointer;
-	box-shadow: inset 0px 1px 0px rgba( 255, 255, 255, 0.1 ),
-				0px -1px 0px rgba( 0, 0, 0, 0.6 );
+	box-shadow: inset 0px 1px 0px rgba( 255, 255, 255, 0.1 );
 
 
 	/* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#494956+0,515160+100 */
@@ -54,44 +53,31 @@
 
 		padding: 10px;
 		text-align: left;
-		width: 750px;
+		min-width: 60%;
+		/*width: 750px;*/
 		max-width: 100%;
 		max-height: 600px;
 
-		// /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#515160+0,1e1e24+100 */
-		// background: rgb(81,81,96); /* Old browsers */
-		// background: -moz-linear-gradient(top,  rgba(81,81,96,1) 0%, rgba(30,30,36,1) 100%); /* FF3.6-15 */
-		// background: -webkit-linear-gradient(top,  rgba(81,81,96,1) 0%,rgba(30,30,36,1) 100%); /* Chrome10-25,Safari5.1-6 */
-		// background: linear-gradient(to bottom,  rgba(81,81,96,1) 0%,rgba(30,30,36,1) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
-		// filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#515160', endColorstr='#1e1e24',GradientType=0 ); /* IE6-9 */
-
-		// border-radius: 4px;
-		// box-shadow: inset 1px 0px 0px rgba( 0, 0, 0, 0.2 ),
-		// 			inset -1px 0px 0px rgba( 0, 0, 0, 0.1 ),
-		// 			inset 0px 1px 0px rgba( 0, 0, 0, 0.1 ),
-		// 			inset 0px -1px 0px rgba( 0, 0, 0, 0.2 ),
-		// 			inset 0px 0px 10px rgba( 255, 255, 255, 0.1 ),
-		// 			-1px 0px 0px rgba( 63, 76, 107, 1 ),
-		// 			0px 1px 0px rgba( 63, 76, 107, 0.6 );
 		font-family: 'Roboto', 'Open Sans', 'Helvetica Neue', Helvetica, sans-serif;
 		font-family: 'Courier New', 'Courier', 'monospace';
 		
 		div{
 
-			color: white;
-			margin: 5px auto;
+			box-sizing: border-box;
+			color: rgba( 255, 255, 255, 0.6 );
+			padding: 4px;
+			font-size: 0.9rem;
 
-			&.commandHeader{
+			&.command{
 				background: rgba( 0, 0, 0, 0.2 );
+				color: #03a9f4;
+			}
 
+			&.log{}
 
-				&.success{
-					// color: #6BDC52;
-				}
-
-				&.fail{
-					// color: #F44336;
-				}
+			&.error{
+				background: rgba( 0, 0, 0, 0.2 );
+				color: #e25a5a;
 			}
 		}
 	}
