--- a/src/frontend/app/style/fixed-data-table.css
+++ b/src/frontend/app/style/fixed-data-table.css
@@ -55,6 +55,7 @@
   border-right-style: solid;
   border-right-width: 1px;
   border-width: 0 1px 0 0;
+  border-color: rgba( 0, 0, 0, 0.1 );
   box-sizing: border-box;
   display: block;
   overflow: hidden;
@@ -162,8 +163,6 @@ body[dir="rtl"] .fixedDataTableColumnResizerLineLayout_main {
   box-sizing: border-box;
   overflow: hidden;
   position: relative;
-  color: white;
-  border: none;
 }
 
 .fixedDataTableLayout_header,
@@ -359,12 +358,12 @@ body[dir="rtl"] .fixedDataTableColumnResizerLineLayout_main {
  * Table.
  */
 .public_fixedDataTable_main {
-  border-color: #d3d3d3;
+  border-color: rgba( 0, 0, 0, 0.1 );
 }
 
 .public_fixedDataTable_header,
 .public_fixedDataTable_hasBottomBorder {
-  border-color: #d3d3d3;
+  border-color: rgba( 0, 0, 0, 0.1 );
 }
 
 .public_fixedDataTable_header .public_fixedDataTableCell_main {
@@ -373,14 +372,14 @@ body[dir="rtl"] .fixedDataTableColumnResizerLineLayout_main {
 
 .public_fixedDataTable_header,
 .public_fixedDataTable_header .public_fixedDataTableCell_main {
-  /*background-color: #f6f7f8;
+  background-color: #f6f7f8;
   background-image: -webkit-linear-gradient(#fff, #efefef);
-  background-image: linear-gradient(#fff, #efefef);*/
+  background-image: linear-gradient(#fff, #efefef);
 }
 
 .public_fixedDataTable_footer .public_fixedDataTableCell_main {
-  /*background-color: #f6f7f8;
-  border-color: #d3d3d3;*/
+  background-color: #f6f7f8;
+  border-color: rgba( 0, 0, 0, 0.1 );
 }
 
 .public_fixedDataTable_topShadow {
@@ -392,7 +391,7 @@ body[dir="rtl"] .fixedDataTableColumnResizerLineLayout_main {
 }
 
 .public_fixedDataTable_horizontalScrollbar .public_Scrollbar_mainHorizontal {
-  /*background-color: #fff;*/
+  background-color: #fff;
 }
 /**
  * Copyright (c) 2015, Facebook, Inc.
@@ -409,12 +408,12 @@ body[dir="rtl"] .fixedDataTableColumnResizerLineLayout_main {
  * Table cell.
  */
 .public_fixedDataTableCell_main {
-  background-color: #000;
-  border-color: #d3d3d3;
+  background-color: #fff;
+  border-color: rgba( 0, 0, 0, 0.1 );
 }
 
 .public_fixedDataTableCell_highlighted {
-  background-color: #000;
+  background-color: #f4f4f4;
 }
 
 .public_fixedDataTableCell_cellContent {
@@ -422,7 +421,7 @@ body[dir="rtl"] .fixedDataTableColumnResizerLineLayout_main {
 }
 
 .public_fixedDataTableCell_columnResizerKnob {
-  background-color: #FCFCFC;
+  background-color: #0284ff;
 }
 /**
  * Copyright (c) 2015, Facebook, Inc.
@@ -440,7 +439,7 @@ body[dir="rtl"] .fixedDataTableColumnResizerLineLayout_main {
  * Column resizer line.
  */
 .public_fixedDataTableColumnResizerLine_main {
-  border-color: #FFF;
+  border-color: #0284ff;
 }
 /**
  * Copyright (c) 2015, Facebook, Inc.
@@ -457,20 +456,20 @@ body[dir="rtl"] .fixedDataTableColumnResizerLineLayout_main {
  * Table row.
  */
 .public_fixedDataTableRow_main {
-  background-color: #1E1E24;
+  background-color: #fff;
 }
 
 .public_fixedDataTableRow_highlighted,
 .public_fixedDataTableRow_highlighted .public_fixedDataTableCell_main {
-  background-color: #1E1E24;
+  background-color: #f6f7f8;
 }
 
 .public_fixedDataTableRow_fixedColumnsDivider {
-  border-color: #d3d3d3;
+  border-color: transparent;
 }
 
 .public_fixedDataTableRow_columnsShadow {
-  background: 0 0 url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAQAAAABCAYAAAD5PA/NAAAAFklEQVQIHWPSkNeSBmJhTQVtbiDNCgASagIIuJX8OgAAAABJRU5ErkJggg==) repeat-y;
+  background: -2px 0 url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAQAAAABCAYAAAD5PA/NAAAAFklEQVQIHWPSkNeSBmJhTQVtbiDNCgASagIIuJX8OgAAAABJRU5ErkJggg==) repeat-y;
 }
 /**
  * Copyright (c) 2015, Facebook, Inc.
@@ -491,22 +490,21 @@ body[dir="rtl"] .fixedDataTableColumnResizerLineLayout_main {
 /* Touching the scroll-track directly makes the scroll-track bolder */
 .public_Scrollbar_main.public_Scrollbar_mainActive,
 .public_Scrollbar_main:hover {
-  /*background-color: rgba(255, 255, 255, 0.8);*/
+  background-color: rgba(255, 255, 255, 0.8);
 }
 
 .public_Scrollbar_mainOpaque,
 .public_Scrollbar_mainOpaque.public_Scrollbar_mainActive,
 .public_Scrollbar_mainOpaque:hover {
-  /*background-color: #fff;*/
+  background-color: #fff;
 }
 
 .public_Scrollbar_face:after {
-  cursor: pointer;
-  background-color: #AAA;
+  background-color: #c2c2c2;
 }
 
 .public_Scrollbar_main:hover .public_Scrollbar_face:after,
 .public_Scrollbar_mainActive .public_Scrollbar_face:after,
 .public_Scrollbar_faceActive:after {
-  background-color: #AAA;
+  background-color: #7d7d7d;
 }
